добавляет возможность управления произвольными атрибутами во вью

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,8 +26,12 @@
         app:symbolHeight="50dp"
         app:symbolWidth="50dp"
         app:symbolsSpacing="0dp"
-        app:symbolTextSize="20sp"
-
+        app:symbolTextSize="30sp"
+        app:borderWidth="10dp"
+        app:borderColor="@color/blue"
+        app:backgroundColour="@color/green"
+        app:codeLength="6"
+        app:backgroundCornerRadius="55dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
