удаляет лишний код

--- a/app/src/main/res/values/code_confirmation_view.xml
+++ b/app/src/main/res/values/code_confirmation_view.xml
@@ -12,6 +12,7 @@
         <attr name="borderWidth" format="dimension"/>
         <attr name="backgroundColour" format="reference"/>
         <attr name="backgroundCornerRadius" format="dimension"/>
+        <attr name="symbolFont" format="string"/>
     </declare-styleable>
 
 </resources>
